# CMakeCM

./: .gitignore  CMakeCM.cmake  CMakeCMVersion.cmake  DownloadCMakeCM.cmake  README.md
.github/workflows/: main.yml
modules/: Colors.cmake  FindGcov.cmake  FindLcov.cmake  JSONParser.cmake  Messages.cmake  Standards.cmake  codecov.cmake  cotire.cmake  doctest_project.cmake
tests/CMakeRC/: CMakeLists.txt
tests/Codecov/: CMakeLists.txt
tests/FindFilesystem/: CMakeLists.txt
tests/JSONParser/: CMakeLists.txt
